--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,8 +11,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:fontFamily">@font/uncutsans_bold</item>
         <!-- Customize your theme here. -->
-        <item name="android:horizontalDivider">@color/white</item>
     </style>
 
     <style name="popupOverflowMenu" parent="@style/Widget.MaterialComponents.PopupMenu.Overflow">
@@ -26,5 +26,6 @@
         <item name="android:colorControlHighlight">@color/light_gray</item>
         <item name="android:colorActivatedHighlight">@color/light_gray</item>
         <item name="android:colorFocusedHighlight">@color/light_gray</item>
+        <item name="android:textSize">16dp</item>
     </style>
 </resources>
