--- a/app/src/main/res/menu/menu_git.xml
+++ b/app/src/main/res/menu/menu_git.xml
@@ -2,25 +2,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:id="@+id/group1">
         <item
-            android:id="@+id/action_commit"
-            android:title="Commit"
+            android:id="@+id/action_initial_commit"
+            android:title="initial commit"
             android:orderInCategory="100"
+            app:showAsAction="never" />
+
+        <item
+            android:id="@+id/action_commit"
+            android:title="commit"
+            android:orderInCategory="200"
             app:showAsAction="never" />
     </group>
 
     <group android:id="@+id/group2">
         <item
             android:id="@+id/action_push"
-            android:title="Push"
-            android:orderInCategory="200"
+            android:title="push"
+            android:orderInCategory="300"
             app:showAsAction="never" />
     </group>
 
     <group android:id="@+id/group3">
         <item
             android:id="@+id/action_fetch"
-            android:title="Fetch"
-            android:orderInCategory="300"
+            android:title="fetch"
+            android:orderInCategory="400"
             app:showAsAction="never" />
     </group>
 </menu>
