--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,19 +61,41 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/CodeTextLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="356dp"
         android:layout_marginTop="53dp"
         android:background="@drawable/code_text_panel_background"
-        android:gravity="left"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        android:orientation="horizontal">
-    </LinearLayout>
+        tools:ignore="MissingConstraints">
+
+        <EditText
+            android:id="@+id/openFileHint"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:inputType="text"
+            android:fontFamily="@font/uncutsans_regularitalic"
+            android:text="@string/open_hint"
+            android:gravity="center"
+            android:textColor="@color/white" />
+
+        <com.amrdeveloper.codeview.CodeView
+            android:id="@+id/codeView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/transparent"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="10dp"
+            android:dropDownWidth="150dp"
+            android:textColor="@color/white"
+            android:dropDownHorizontalOffset="0dp"
+            android:dropDownSelector="@color/dark_gray"
+            android:gravity="top|start">
+        </com.amrdeveloper.codeview.CodeView>
+
+    </FrameLayout>
 
 
     <LinearLayout
@@ -85,7 +107,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="53dp"
         app:layout_constraintEnd_toStartOf="@+id/CodeTextLayout"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
