--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="darker_dark_gray">#1A1C20</color>
     <color name="lighter_dark_gray">#1E1F23</color>
+    <color name="line_number_color">#AEA992</color>
 </resources>
