--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:text="Open File"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"/>    
+        android:layout_margin="16dp"/>
 
     <Button
         android:id="@+id/exit_button"
@@ -24,5 +24,18 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="Exit" />
+
+    <Button
+        android:id="@+id/file_explorer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="file explorer" />
+
+    <Button
+        android:id="@+id/openInternalStorageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Internal Storage" />
 
 </LinearLayout>
