--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="line_number_color">#AEA992</color>
     <color name="error_red">#E84E4E</color>
     <color name="accept_green">#54B731</color>
+    <color name="suggestion_yellow">#EAD569</color>
 </resources>
