Some project and directory interaction, explorer tree for currently opened project and early git functionality(only git clone)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="error_red">#E84E4E</color>
     <color name="accept_green">#54B731</color>
     <color name="suggestion_yellow">#EAD569</color>
+    <color name="cool_blue">#6F8DEA</color>
 </resources>
