--- a/app/src/main/res/menu/menu_git.xml
+++ b/app/src/main/res/menu/menu_git.xml
@@ -2,12 +2,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:id="@+id/group1">
         <item
-            android:id="@+id/action_initial_commit"
-            android:title="Initial commit"
-            android:orderInCategory="100"
-            app:showAsAction="never" />
-
-        <item
             android:id="@+id/action_commit"
             android:title="Commit"
             android:orderInCategory="200"
@@ -27,6 +21,14 @@
             android:id="@+id/action_fetch"
             android:title="Fetch"
             android:orderInCategory="400"
+            app:showAsAction="never" />
+    </group>
+
+    <group android:id="@+id/group4">
+        <item
+            android:id="@+id/action_clone"
+            android:title="Clone"
+            android:orderInCategory="500"
             app:showAsAction="never" />
     </group>
 </menu>
