--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -388,4 +388,76 @@
 
     </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/GitCloneLayout"
+        android:layout_width="500dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginStart="400dp"
+        android:background="@drawable/text_enter_background"
+        >
+
+        <TextView
+            android:id="@+id/GitCloneTitle"
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="30dp"
+            android:background="@color/transparent"
+            android:fontFamily="@font/uncutsans_bold"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:text="Clone Git Repository" />
+
+        <ImageButton
+            android:id="@+id/GitCloneClose"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@color/transparent"
+            android:layout_marginLeft="455dp"
+            android:layout_marginTop="15dp"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/GitCloneEnterBackground"
+            android:layout_width="400dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="55dp"
+            android:layout_height="60dp"
+            android:background="@drawable/text_enter_field_background"
+            android:gravity="center_horizontal|center_vertical">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/GitCloneEnterField"
+                android:layout_width="390dp"
+                android:layout_height="52dp"
+                android:background="@color/transparent"
+                android:textColor="@color/white"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/GitCloneError"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="130dp"
+            android:fontFamily="@font/uncutsans_regularitalic"
+            android:textColor="@color/error_red"
+            android:gravity="center"
+            android:text="" />
+
+        <Button
+            android:id="@+id/GitCloneButtonSubmit"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="350dp"
+            android:layout_marginTop="130dp"
+            android:textColor="@color/accept_green"
+            android:text="Clone"
+            android:background="@drawable/open_button_background">
+        </Button>
+
+    </FrameLayout>
+
+
 </FrameLayout>
